# pyrpoc

./: .gitignore  README.md  acquisition_metadata.json  config.json  config_tiled.json  cropped.tiff  mvp_checklist.md  notes.md  pyproject.toml  setup.py  simple_galvo_tester.py
data/swabian_raw_flim/: 20260304_105721_flim_test_001_intensity.tiff  20260304_105721_flim_test_001_mean_delay_ps.tiff  20260304_105721_flim_test_001_metadata.json  20260304_105721_flim_test_001_raw.npz  20260304_125152_flim_test_001_intensity.tiff  20260304_125152_flim_test_001_mean_delay_ps.tiff  20260304_125152_flim_test_001_metadata.json  flim_gen.py  npzreader.py  other_flip.py  other_flip_irf.py  process.py  simflim.py  simflim_sigma_uncertain.py
mokupro_testing/: divider.v  divider_tb.v  ratios.py  test.py
pyrpoc/: acquisitions.py  dockable_widgets.py  gui.py  gui_handler.py  image_widgets.py  main.py
pyrpoc/acquisitions/: __init__.py  base_acquisition.py  confocal.py  confocal_mosaic.py  fish.py  flim.py  hyperspectral.py  local_rpoc.py  mosaic.py  simulated.py  split_stream.py  widefield.py  zscan.py
pyrpoc/backend_utils/: CODE_REVIEW.md  __init__.py  acquired_data.py  array_contracts.py  contracts.py  data.py  data_management_summary.md  description.md  guidelines.md  opto_control_contexts.py  parameter_utils.py  registry.py  state_helpers.py
pyrpoc/config/: 4174_config.json  config.json
pyrpoc/demos/: hello_world.py  line_readout.py  test_ct.py
pyrpoc/displays/: __init__.py  base_display.py  tiled.py  (+10 more)
scripts/: verify_ads_display_teardown.py
test/: acquisition_ch0.tiff  acquisition_ch1.tiff  acquisition_ch2.tiff  acquisition_metadata.json
test_data/: acquisition_intensity.tiff  acquisition_meta.json  acquisition_raw.npz  read_npz.py
tests/: conftest.py  test_daq_helpers.py
(+352 files in other folders)
