[project]
name = "pyrpoc"
version = "3.0.2"
description = "Real-time Precision Opto-Control Toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
  { name = "Ishaan Singh", email = "sing1125@purdue.com" }
]

dependencies = [
  "cellpose", 
  "opencv-python",
  "pillow",
  "matplotlib",
  "pyqt6",       
  "PyQt6Ads",
  "pyqtgraph",
  "pyqtdarktheme",
  "superqt",    
  "nidaqmx",   
  "pyvisa",      
  "tifffile"
]

[project.scripts]
pyrpoc = "pyrpoc.main:main"

[tool.setuptools.packages.find]
include = ["pyrpoc*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
