[project]
name = "pyrpoc"
version = "3.0.2"
description = "Real-time Precision Opto-Control Toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
  { name = "Ishaan Singh", email = "sing1125@purdue.com" }
]

dependencies = [
  "cellpose", 
  "opencv-python",
  "pillow",
  "matplotlib",
  "pyqt6",       
  "PyQt6Ads",
  "pyqtgraph",
  "pyqtdarktheme",
  "superqt",    
  "nidaqmx",   
  "pyvisa",      
  "tifffile"
]

[project.scripts]
pyrpoc = "pyrpoc.main:main"

[tool.setuptools.packages.find]
include = ["pyrpoc*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "pyright",
]

[tool.pyright]
include = ["pyrpoc"]
exclude = [
  "pyrpoc/instruments/swabian_demos",
  "rpoc_env",
  "dist",
  "build",
  "**/__pycache__",
  "**/*.egg-info",
]
venvPath = "."
venv = "rpoc_env"
pythonVersion = "3.13"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
